Fixes to css (overflow and centering on mobile)

--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-/* TŁO */
+body,
+html {
+  height: 100vh;
+  overflow: hidden;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .ball {
   position: absolute;
@@ -6,10 +16,6 @@
   opacity: 0.7;
   z-index: -10;
 }
-
-/* /////////////////////////////////////////////////////////////////////////////////// */
-
-/* KSZTAŁTY I ROZMIARY ELEMENTÓW */
 
 .box {
   background: #111111;
@@ -20,48 +26,47 @@
   margin: 1rem;
   /* position: relative; */
   width: 200px;
-
 }
 
 .box-4 {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-#losuj, #zatwierdz, #nowaGra{
+#losuj,
+#zatwierdz,
+#nowaGra {
   width: 150px;
   height: 55px;
   border-radius: 10px;
-  margin-top: 10px ;
-  margin-bottom: 10px ;
+  margin-top: 10px;
+  margin-bottom: 10px;
   margin-left: 25px;
   margin-right: 25px;
 }
 
-.colorsValue{
+.colorsValue {
   width: 200px;
   height: 140px;
 }
 
-
-h1{
+h1 {
   font-size: 5em;
   text-align: center;
   color: #337ab7;
 }
 
-
-.wylosowaneWartosci{
+.wylosowaneWartosci {
   border: 1px solid black;
-  width:150px;
+  width: 150px;
   height: 25px;
 }
 
-.form-control{
+.form-control {
   width: 200px;
   margin-bottom: 10px;
 }
 
-#wynik{
+#wynik {
   width: 200px;
   height: 50px;
   border-radius: 5px;
@@ -72,7 +77,7 @@ h1{
   flex-direction: column;
   margin-top: 10px;
 }
-#proby{
+#proby {
   width: 200px;
   height: 50px;
   border-radius: 5px;
@@ -84,22 +89,17 @@ h1{
   margin-top: 10px;
 }
 
-
-/* /////////////////////////////////////////////////////////////////////////////////// */
-
-/* INDEX.HTML */
-
-.text{
+.text {
   text-align: center;
   text-align: justify;
 }
 
-.text{
+.text {
   width: 600px;
   text-align: center;
 }
 
-.cont{
+.cont {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -107,57 +107,46 @@ h1{
   margin-top: 60px;
 }
 
-#rozpocznij{
+#rozpocznij {
   margin-top: 20px;
 }
 
-
-
-/* /////////////////////////////////////////////////////////////////////////////////// */
-
-/* UŁOŻENIE ELEMENTÓW NA STRONIE */
-.box_i_wartosci{
+.box_i_wartosci {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.przyciski{
+.przyciski {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.komunikaty_i_nowa_gra{
+.komunikaty_i_nowa_gra {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-
 }
-
-
-
 
 .loader {
-  filter:hue-rotate(0deg);
-  color: linear-gradient(45deg,#0f8,#08f);
-  animation:hue 50000ms infinite linear;
+  filter: hue-rotate(0deg);
+  color: linear-gradient(45deg, #0f8, #08f);
+  animation: hue 50000ms infinite linear;
 }
 
-@keyframes hue{
-  0%{filter: hue-rotate(0deg);}
-  100%{filter:hue-rotate(360deg);}
-
+@keyframes hue {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+  }
 }
 
-
-
-.container{
-    /* border: 1px solid black; */
-    position: absolute;
-  	top:0;
-  	bottom: 0;
-  	left: 0;
-  	right: 0;
-  	margin: auto;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
 }
